fix(Global Style.css): Allow elements to expand outside of the ojs cells (i.e., tooltips)
Tooltips were causing x and y overflow scroll rather than overflowing onto the rest of the page. this should allow more overflow

BREAKING CHANGE: Possibly breaking - Need to see how this impacts other cells and notebooks now that the elements can overflow.

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,10 @@ strong {
   margin-left: 10px;
 }
 
+.cell-output, .cell-output-display {
+  overflow: visible !important;
+}
+
 /* Style links */
 main a[href] {
   color: var(--atlasGreen);
